--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ldlc-discord-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "author": "MGL",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ."
   },
   "dependencies": {
     "discord.js": "^12.5.3",
