--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "MGL",
   "license": "MIT",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.9"
   }
 }
